trying to fix notifications in the web socket

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://myuser:mypassword@209.38.192.145:5432/mydatabase?schema=public"
+DATABASE_URL="postgresql://myuser:mypassword@209.38.192.145:8888/mydatabase?schema=public"
 REDIS_URL="lolo"
 
 
@@ -20,4 +20,6 @@ KEYCLOAK_URL=https://auth.my-app.com
 KC_ADMIN_USERNAME=admin
 KC_ADMIN_PASSWORD=supersecurepassword
 KC_CLIENT_ID=my-app-client
+EMAIL=dblaskoff@gmail.com
+PASSWORD=verl vttl aonp botn
 
