updated to nativewind

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,77 @@
-node_modules
-/node_modules
+.DS_Store
+Thumbs.db
+
+
+
+*.log
+.log.
+logs/
+debug.log
+error.log
+
+
+.env
+.env.*
+secrets.*
+config/.json
+config/.yml
+config/*.toml
+
+pycache/
+*.pyc
+*.pyo
+*.pyd
+venv/
+*.egg-info/
+pip-log.txt
+
+
+node_modules/
+npm-debug.log
+yarn-error.log
+
+
+bin/
+pkg/
+*.exe
+*.out
+
+target/
+Cargo.lock
+
+
+*.o
+*.so
+*.a
+*.dylib
+*.dll
+*.exe
+*.class
+*.jar
+
+
+nmap_scan.xml
+*.nessus
+burp_state.json
+recon_results/
+metasploit_logs/
+hydra_output.txt
+john.pot
+hashes.txt
+dirb_results/
+wfuzz_results/
+sqlmap_logs/
+
+
+wordlists/
+rockyou.txt
+custom_wordlist.txt
+
+
+reports/
+screenshots/
+findings/
+poc_videos/
+notes.txt
+
+.qodo
