--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^16.4.7",
     "elysia": "^1.2.25",
     "emailjs-com": "^3.2.0",
+    "ioredis": "^5.6.0",
     "mailerjs": "^1.1.1",
     "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
+    "redis": "^4.7.0",
     "ws": "^8.18.1"
   }
 }
